--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "react": "^18.2.0",
